@@ -1,3 +1,8 @@
+2002-01-16  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02845]
+	* regex.c (newRegex0): check regex->storage[STORAGE_MAX]
+
 2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02843] w3mmail.cgi.in update
@@ -1983,4 +1988,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.224 2002/01/15 17:46:01 ukai Exp $
+$Id: ChangeLog,v 1.225 2002/01/15 18:26:13 ukai Exp $
